@@ -230,6 +230,11 @@ class LoaderTestCase(TestBase):
         assert_(isPath(r"\abc"))
         assert_(isPath(r"\abc\def"))
         assert_(isPath(r"c:\abc\def"))
+        assert_(isPath("/ab:cd"))
+        assert_(isPath(r"\ab:cd"))
+        assert_(isPath("long name with spaces"))
+        assert_(isPath("long name:with spaces"))
+        assert_(not isPath("ab:cd"))
         assert_(not isPath("http://www.example.com/"))
         assert_(not isPath("http://www.example.com/sample.conf"))
         assert_(not isPath("file:///etc/zope/zope.conf"))
